update constructing new instances